# open-webui-n8n-pipe

./: .gitignore  .mypi.ini  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
n8n_pipe/: n8n_pipe.py
tests/: test_n8n_pipe.py
